--- a/app/html/ayuda.html
+++ b/app/html/ayuda.html
@@ -10,7 +10,7 @@
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     
-    <title>TITULO</title>
+    <title>Comic Central</title>
     <link rel="icon" href="img/comic.png" type="image/x-icon">
 </head>
 <body>
@@ -20,6 +20,6 @@
     <hr>
     <br><br><br><br><br>
     <!--LINK_VUELTA-->
-    <a href="../index.html">COMIENZA TU AVENTURA</a>
+    <a href="../index.php">COMIENZA TU AVENTURA</a>
 </body>
 </html>
